methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if(estSurBiscuit())
  {
    return true
  }

  }


var vuBiscuit:Boolean =false
while(!vuBiscuit)
	{
    for(compteur<-1 to 6)
    	{
        if (vuBiscuit()){
          vuBiscuit = haveBaggle()
        }
      }
    
  }
recule(6)